[package]
name = "ren3"
version = "0.1.0"
authors = ["Aloxaf <aloxafx@gmail.com>"]
description = "Do file renaming using regular expressions."
documentation = "https://github.com/Aloxaf/ren3"
repository = "https://github.com/Aloxaf/ren3"
readme = "README.MD"
keywords = ["regex", "rename"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
regex = "^1.0.5"
clap = {version = "^2.32.0", features = ["yaml"]}
sedregex = {git = "https://gitlab.com/Aloxaf/sedregex"}
