[package]
name = "ren3"
version = "0.1.0"
authors = ["Aloxaf <aloxafx@gmail.com>"]
description = "Do file renaming using regular expressions."
documentation = "https://github.com/Aloxaf/ren3"
repository = "https://github.com/Aloxaf/ren3"
readme = "README.MD"
keywords = ["regex", "rename"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "1.1.0"
clap = { version = "2.32.0", features = ["yaml"] }
colored = "1.6.1"
